--- a/package.json
+++ b/package.json
@@ -10,7 +10,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.20.0",
+    "express": "^5.0.0",
+    "pg": "^8.12.0",
+    "sequelize": "^6.37.3",
     "uuid": "^10.0.0"
+  },
+  "devDependencies": {
+    "sequelize-cli": "^6.6.2"
   }
 }
