--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "bcrypt": "^5.1.1",
     "dotenv": "^16.4.5",
     "express": "^5.0.0",
+    "jsonwebtoken": "^9.0.2",
     "pg": "^8.12.0",
     "sequelize": "^6.37.3",
-    "uuid": "^10.0.0"
+    "uuid": "^10.0.0",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "sequelize-cli": "^6.6.2"
